--- a/seguros-event-sourcing/fatura-service/src/main/resources/application.yml
+++ b/seguros-event-sourcing/fatura-service/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8081
 spring:
   jackson:
     serialization:
@@ -6,9 +8,10 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092,localhost:9093,localhost:9094
     consumer:
-      group-id: apolice-service
+      group-id: fatura-service
       auto-offset-reset: earliest
 app:
   topic:
     apolice: apolice
     dependente: dependente
+    fatura: fatura
